declarative/processor/src/test/resources/good/graph unannotated method is static.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;

@Graph
interface X {
    static Object x() {
        return null;
    }
}
